--- a/3.html
+++ b/3.html
@@ -5,14 +5,15 @@
 	<title>canvas圆</title>
 </head>
 <body>
-	<canvas id="canvas"></canvas>
+	<canvas id="canvas" style="border:1px solid #aaa;display: block;margin: 50px auto;"></canvas>
 </body>
 	<script type="text/javascript">
 		var canvas =document.getElementById('canvas');
+		canvas.width =1000;
+		canvas.height =300;
 		var cxt = canvas.getContext('2d');
 
-		canvas.width =1000;
-		canvas.heigth =400;
+		
 
 		cxt.lineWidth = 5;
 		cxt.strokeStyle = "#005588";
@@ -22,6 +23,21 @@
 			cxt.arc(50+i*100,50,40,0,(i+1)*0.2*Math.PI);
 			cxt.closePath();
 			cxt.stroke();
+		}
+
+		for(var i = 0; i<10; i++){
+			cxt.beginPath();
+			cxt.arc(50+i*100,150,40,0,(i+1)*0.2*Math.PI);
+
+			cxt.stroke();
+		}
+
+		for(var i = 0; i<10; i++){
+			cxt.beginPath();
+			cxt.arc(50+i*100,250,40,0,(i+1)*0.2*Math.PI);
+
+			cxt.fillStyle="#005588";
+			cxt.fill();
 		}
 		
 
