--- a/5.html
+++ b/5.html
@@ -5,13 +5,10 @@
 	<title>Document</title>
 	<style>
 	.myclass{
-		border:#666 1px solid;background:#fff;
+		background-color: #ff0;
 		width: 300px;
-		height: 100px;
+		height: 300px;
 	}
-	.mesWindow{border:#666 1px solid;background:#fff;}
-	.mesWindowTop{border-bottom:#eee 1px solid;margin-left:4px;padding:3px;font-weight:bold;text-align:left;font-size:12px;}
-	.mesWindowContent{margin:4px;font-size:12px;}
 	</style>
 </head>
 <body>
@@ -26,7 +23,7 @@
 <script>
 var mydiv = document.createElement("div");
 mydiv.id ="aaa";
-mydiv.innerHTML ="<div class='myclass'><div class='mesWindowTop'>关闭</div><div class='mesWindowContent'><input type='text' name='money' id='money'><input type='submit' onclick='ajax()'></div></div>";
+mydiv.innerHTML ="<div class='myclass'><table><tr><td>标题</td><td><input type='text' name='money' id='money'></td></tr><tr><td><input type='submit' onclick='ajax()'></td></tr></table></div>";
 document.body.appendChild(mydiv);
 
 var bobj1 = document.getElementById('show1');
