--- a/侧栏工具条2/index.html
+++ b/侧栏工具条2/index.html
@@ -121,5 +121,6 @@
 		</a>
 	</div>
 </body>
-	<script src="js/require.js" data-main="js/main"></script>
+	<!-- <script src="js/require.js" data-main="js/main"></script> -->
+	<script src="js/scroll.js"></script>
 </html>
